--- a/src/components/Navbar/NavbarStyles.css
+++ b/src/components/Navbar/NavbarStyles.css
@@ -1,12 +1,14 @@
 .nav{
     top:0;
-    position: sticky;
+    position: fixed;
     z-index: 100;
+    width: 100%;
     display: flex;
     height: 70px;
     align-items: center;
     justify-content: space-between;
     transition: 0.15s;
+    background-color: transparent;
   }
   
   .nav.active {
