--- a/src/pages/menu/PizzaItems/PizzaItems.css
+++ b/src/pages/menu/PizzaItems/PizzaItems.css
@@ -1,19 +1,34 @@
 .pizza-items{
-    margin-top: 50px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 30px;
-    width: 100%;
+
+    margin: 50px 0;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%; 
+    gap: 20px;
 }
 .pizza-item{
+    width: calc(25% - 80px);
+    padding: 10px 18px;
     margin: 0 30px;
     border: 1px solid black;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    height: 500px;
+    height: 550px;
 }
 .pizza-item select{
     width: 50%;
+}
+
+.pizza-item_name{
+    font-size: 1.35rem;
+}
+
+.pizza-item_title{
+    display: flex;
+    text-align: center;
+    color:rgb(118, 118, 118);
 }
